connecting string yazıldı, modeller olusturuldu, dto olusturuldu

--- a/API/N-TierArchitecture.API/appsettings.json
+++ b/API/N-TierArchitecture.API/appsettings.json
@@ -1,9 +1,17 @@
 {
+  "ConnectionStrings": {
+    "SqlServer": "Server=BASDE;Database=NKursApi;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Token": {
+    "Issuee": "BasdeCompany",
+    "Audıence": "Basdemir",
+    "SecurityKey": "MySecurityKey000"
   },
   "AllowedHosts": "*"
 }
