--- a/API/N-TierArchitecture.Core/N-TierArchitecture.Core.csproj
+++ b/API/N-TierArchitecture.Core/N-TierArchitecture.Core.csproj
@@ -13,4 +13,10 @@
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="UnitOfWorks\" />
+    <Folder Include="Services\" />
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
 </Project>
